Style: Remove justify text for best accesibility practice to avoid 'rivers of white space'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ video {
 .flex-container {
     display: flex;
     flex-direction: row;
-    text-align: justify;
+    
   }
   
   .flex-item-left {
@@ -320,7 +320,6 @@ h2 {
 
 .footer-left p {
     padding-right: 20%;
-    text-align: justify;
     color: var(--deep-grey);
 }
 
